plugins {
    id 'org.springframework.boot' version '2.3.4.RELEASE'
    id 'java'
}

apply plugin: 'io.spring.dependency-management'

group = 'jp.co.who'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '14'

configurations {
    developmentOnly
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-security'
    compile 'org.springframework.boot:spring-boot-starter-web'
    compile 'org.springframework.boot:spring-boot-starter-webflux'
    compile 'org.springframework.boot:spring-boot-starter-thymeleaf'

    // db
    compile 'org.springframework.boot:spring-boot-starter-jdbc'
    compile 'org.postgresql:postgresql'
    compile 'com.h2database:h2:1.4.+'

    // aws s3
    compile 'com.amazonaws:aws-java-sdk-s3:1.11.869'

    developmentOnly 'org.springframework.boot:spring-boot-devtools'

    // lombok
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    // test
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
    testImplementation 'com.squareup.okhttp3:mockwebserver'
	runtimeOnly 'org.springframework.boot:spring-boot-devtools'

    // log
    implementation "ch.qos.logback:logback-classic:1.2.3"
}
